finished the mastermat generation as sparse COO matrix

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ tensorflow/epochdata/*
 /data/multiWienerPSFStack_40z_aligned.mat
 /data/*
 /pytorch/2D deconvolution demo (pretrained).ipynb
+/common/col_inds.dat
+/common/row_inds.dat
+/common/values.dat
