--- a/.gitignore
+++ b/.gitignore
@@ -17,13 +17,5 @@ tensorflow/epochdata/*
 /data/multiWienerPSFStack_40z_aligned.mat
 /data/*
 /pytorch/2D deconvolution demo (pretrained).ipynb
-/common/col_inds.dat
-/common/row_inds.dat
-/common/values.dat
-/common/row_inds_csr.dat
-/common/col_inds_csr.dat
-/common/values_csr.dat
-/common/row_inds_csr.npy
-/common/col_inds_csr.npy
-/common/values_csr.npy
 /common/*.npy
+/common/*.dat
