--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ ipython_config.py
 *.jpg
 *.jpeg
 *.tiff
+*.tif
 *.npy 
 *.pt
 /tensorflow/saved_models/*
@@ -20,3 +21,4 @@ tensorflow/epochdata/*
 /common/*.npy
 /common/*.dat
 /common/*.swp
+
