--- a/tensorflow/reproduce2.yml
+++ b/tensorflow/reproduce2.yml
@@ -105,6 +105,7 @@ dependencies:
   - libgomp=11.2.0=h1234567_1
   - libidn2=2.3.2=h7f8727e_0
   - libllvm10=10.0.1=hbcb73fb_5
+  - libllvm11=11.1.0=h9e868ea_6
   - libnghttp2=1.46.0=hce63b2e_0
   - libopenblas=0.3.21=h043d6bf_0
   - libopus=1.3.1=h7b6447c_0
@@ -126,6 +127,7 @@ dependencies:
   - libxml2=2.9.14=h74e7548_0
   - libxslt=1.1.35=h4e12654_0
   - libzopfli=1.0.3=he6710b0_0
+  - llvmlite=0.39.1=py39he621ea3_0
   - lxml=4.9.1=py39h1edc446_0
   - lz4-c=1.9.4=h6a678d5_0
   - markupsafe=2.1.1=py39h7f8727e_0
@@ -147,6 +149,7 @@ dependencies:
   - notebook-shim=0.2.2=py39h06a4308_0
   - nspr=4.33=h295c915_0
   - nss=3.74=h0370c37_0
+  - numba=0.56.4=py39h417a72b_0
   - numpy-base=1.23.5=py39h1e6e340_0
   - opencv=4.6.0=py39h417a72b_3
   - openh264=2.1.1=h4ff587b_0
@@ -200,6 +203,7 @@ dependencies:
   - soupsieve=2.3.2.post1=py39h06a4308_0
   - sqlite=3.41.1=h5eee18b_0
   - stack_data=0.2.0=pyhd3eb1b0_0
+  - tbb=2021.8.0=hdb19cb5_0
   - terminado=0.17.1=py39h06a4308_0
   - testpath=0.6.0=py39h06a4308_0
   - tifffile=2021.7.2=pyhd3eb1b0_2
